changes in header conected with scroling

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -78,6 +78,9 @@ color: #e83e8c;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        .yel{
+            color:goldenrod ;
+        }
 
     }
     li{
